--- a/AppInventor2/Base.lproj/Main.storyboard
+++ b/AppInventor2/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Home View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="AIHomeViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +15,119 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="meH-dU-nk1">
+                                <rect key="frame" x="180" y="30" width="240" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="1W4-if-keV"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="6gy-ZR-nh4"/>
+                                    <constraint firstAttribute="width" constant="240" id="G2A-EZ-g0E"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fUM-6o-5mS">
+                                <rect key="frame" x="505" y="526" width="79" height="28"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="28" id="TlN-sF-QpP"/>
+                                    <constraint firstAttribute="width" constant="79" id="yVh-cR-bfV"/>
+                                </constraints>
+                                <state key="normal" image="btn_About">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y3c-ew-q0V">
+                                <rect key="frame" x="205" y="118" width="190" height="50"/>
+                                <inset key="imageEdgeInsets" minX="5" minY="5" maxX="5" maxY="5"/>
+                                <state key="normal" image="btn_Soundboard" backgroundImage="btn_Background">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fwM-mf-WPe">
+                                <rect key="frame" x="205" y="194" width="190" height="50"/>
+                                <inset key="imageEdgeInsets" minX="5" minY="5" maxX="5" maxY="5"/>
+                                <state key="normal" image="btn_Magicpig" backgroundImage="btn_Background">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CnJ-e7-AVq">
+                                <rect key="frame" x="205" y="270" width="190" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="60" id="2ER-wC-Zzc"/>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="190" id="jNL-1L-MOk"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="5" minY="5" maxX="5" maxY="5"/>
+                                <state key="normal" image="btn_Painting" backgroundImage="btn_Background">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p5U-F7-xUk">
+                                <rect key="frame" x="205" y="346" width="190" height="50"/>
+                                <inset key="imageEdgeInsets" minX="5" minY="5" maxX="5" maxY="5"/>
+                                <state key="normal" image="btn_Frogsqasher" backgroundImage="btn_Background">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EDf-Sm-e1X">
+                                <rect key="frame" x="205" y="422" width="190" height="50"/>
+                                <inset key="imageEdgeInsets" minX="5" minY="5" maxX="5" maxY="5"/>
+                                <state key="normal" image="btn_Minigold" backgroundImage="btn_Background">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aCX-L7-IKj">
+                                <rect key="frame" x="253" y="520" width="95" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="nQc-MM-Nfe"/>
+                                    <constraint firstAttribute="width" constant="95" id="nxW-S9-E4C"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="5" minY="5" maxX="5" maxY="5"/>
+                                <state key="normal" image="btn_Quiz" backgroundImage="btn_Background">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="CnJ-e7-AVq" firstAttribute="top" secondItem="fwM-mf-WPe" secondAttribute="bottom" constant="26" id="1Jf-ag-0t3"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="aCX-L7-IKj" secondAttribute="bottom" constant="40" id="24h-HQ-FGh"/>
+                            <constraint firstAttribute="trailing" secondItem="fUM-6o-5mS" secondAttribute="trailing" constant="16" id="7wy-vU-ZuE"/>
+                            <constraint firstItem="fwM-mf-WPe" firstAttribute="top" secondItem="y3c-ew-q0V" secondAttribute="bottom" constant="26" id="AUy-qK-8wL"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="fUM-6o-5mS" secondAttribute="bottom" constant="46" id="DOw-vW-aHh"/>
+                            <constraint firstItem="CnJ-e7-AVq" firstAttribute="width" secondItem="y3c-ew-q0V" secondAttribute="width" id="F8w-bR-FLL"/>
+                            <constraint firstItem="p5U-F7-xUk" firstAttribute="top" secondItem="CnJ-e7-AVq" secondAttribute="bottom" constant="26" id="G8O-2e-7g3"/>
+                            <constraint firstItem="CnJ-e7-AVq" firstAttribute="height" secondItem="y3c-ew-q0V" secondAttribute="height" id="LQL-EC-PT6"/>
+                            <constraint firstAttribute="centerX" secondItem="CnJ-e7-AVq" secondAttribute="centerX" id="MWg-nr-8hU"/>
+                            <constraint firstItem="CnJ-e7-AVq" firstAttribute="height" secondItem="EDf-Sm-e1X" secondAttribute="height" id="Qp8-8d-Ijk"/>
+                            <constraint firstItem="EDf-Sm-e1X" firstAttribute="top" secondItem="p5U-F7-xUk" secondAttribute="bottom" constant="26" id="Sam-1Y-hv8"/>
+                            <constraint firstAttribute="centerX" secondItem="fwM-mf-WPe" secondAttribute="centerX" id="Vsp-sA-zOl"/>
+                            <constraint firstItem="y3c-ew-q0V" firstAttribute="top" secondItem="meH-dU-nk1" secondAttribute="bottom" constant="38" id="Xai-ic-UnH"/>
+                            <constraint firstAttribute="centerX" secondItem="EDf-Sm-e1X" secondAttribute="centerX" id="Y8f-4N-1gA"/>
+                            <constraint firstItem="aCX-L7-IKj" firstAttribute="top" secondItem="EDf-Sm-e1X" secondAttribute="bottom" constant="48" id="aFk-lg-OBl"/>
+                            <constraint firstItem="CnJ-e7-AVq" firstAttribute="width" secondItem="fwM-mf-WPe" secondAttribute="width" id="dK4-Zt-IfZ"/>
+                            <constraint firstItem="CnJ-e7-AVq" firstAttribute="height" secondItem="fwM-mf-WPe" secondAttribute="height" id="glK-r2-5bL"/>
+                            <constraint firstAttribute="centerX" secondItem="aCX-L7-IKj" secondAttribute="centerX" id="ilH-ZI-7kd"/>
+                            <constraint firstAttribute="centerX" secondItem="y3c-ew-q0V" secondAttribute="centerX" id="jE1-dT-ozC"/>
+                            <constraint firstAttribute="centerX" secondItem="p5U-F7-xUk" secondAttribute="centerX" id="kML-oR-qER"/>
+                            <constraint firstItem="CnJ-e7-AVq" firstAttribute="height" secondItem="p5U-F7-xUk" secondAttribute="height" id="mhR-Yp-vJc"/>
+                            <constraint firstItem="meH-dU-nk1" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="10" id="oMW-N2-Mk6"/>
+                            <constraint firstItem="CnJ-e7-AVq" firstAttribute="width" secondItem="EDf-Sm-e1X" secondAttribute="width" id="ryY-G0-Uo4"/>
+                            <constraint firstItem="CnJ-e7-AVq" firstAttribute="width" secondItem="p5U-F7-xUk" secondAttribute="width" id="ttc-Ow-ZcH"/>
+                            <constraint firstAttribute="centerX" secondItem="meH-dU-nk1" secondAttribute="centerX" id="zlt-0h-zDx"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="btn_About" width="168" height="57"/>
+        <image name="btn_Background" width="759" height="243"/>
+        <image name="btn_Frogsqasher" width="714" height="196"/>
+        <image name="btn_Magicpig" width="714" height="196"/>
+        <image name="btn_Minigold" width="714" height="196"/>
+        <image name="btn_Painting" width="714" height="196"/>
+        <image name="btn_Quiz" width="406" height="87"/>
+        <image name="btn_Soundboard" width="703" height="171"/>
+        <image name="logo" width="920" height="191"/>
+    </resources>
 </document>
